--- a/index.html
+++ b/index.html
@@ -219,9 +219,6 @@
 
 
 
-
-		<!-- CLIENTS I`VE WORKED WITH -->
-
 				
 </div></section>
 
@@ -246,12 +243,24 @@
 		<p>I also enjoy working on artistic projects that enhance visual narratives across different mediums, including motion pictures and art exhibitions.</p>
 	</div>
 
-	<!--
 	<div class="content">
 		<p class="role">Awards & honors</p>
+		<div class="awards-grid">
+			<div class="award">
+				<img src="images/award-cannes.png" alt="">
+				<p>Cannes Shortlist</p>
+			</div>
+			<div class="award">
+				<img src="images/award-sol.png" alt="">
+				<p>El SOL Finalist</p>
+			</div>
+			<div class="award">
+				<img src="images/award-echo.png" alt="">
+				<p>ECHO Awards 4th place</p>
+			</div>
+		</div>
 
 	</div>
-	-->
 
 	<div class="content">
 		<p class="role">Other Works</p>
@@ -261,11 +270,6 @@
 			<li><a href="https://karabast.net/" target="_blank">Karabast · SWU simulator</a></li>
 		</ul>
 
-	</div>
-
-	<div class="contactContainer">
-		<h3>Get in touch!</h3>
-		<p><span class="mail">Drop me a line</span> or reach out on <a href="https://www.linkedin.com/in/luishj/" target="_blank" class="linkedin">Linkedin</a></p>
 	</div>
 
 </div></section>
@@ -285,7 +289,11 @@
 
 <section id="contact"><div class="wrapper">
 
-				
+	<div class="contactContainer">
+		<h3>Get in touch!</h3>
+		<p><span class="mail">Drop me a line</span> or reach out on<a href="https://www.linkedin.com/in/luishj/" target="_blank" class="linkedin">Linkedin</a></p>
+	</div>
+
 </div></section>
 
 
@@ -317,7 +325,7 @@ var currentIndex = 0;
 var scrollingNow = false;
 var rolesIndex = 0;
 var roles = ["a product", "a motion", "an interaction"];
-var sections = ['#intro','#works','#experience','#referrals','#about'];
+var sections = ['#intro','#works','#experience','#referrals','#about','#contact'];
 var $carrusel;
 var $subrayado;
 var $contentRole;
