Showpal text correction

--- a/showpal/index.html
+++ b/showpal/index.html
@@ -166,7 +166,7 @@
 				<p class="role">Results</p>
 			</div>
 			<p class="description"><strong>Over 420 K Downloads & 6 K Monthly Active Users</strong><br>Users praised the app's unique combination of aesthetics and functionality as the reason they continue to use it.</p>
-			<p class="description"><strong>Press coverage</strong><br>Renowned outlets praised the app for its simplicity and innovative design. AppAdvice referred to it as <i>"the TV tracker you've been waiting for"</i>, while MacStories commended its gesture-driven discovery experience and clean UI.</p>
+			<p class="description"><strong>Press coverage</strong><br>Renowned outlets praised the app for its simplicity and innovative design. AppAdvice referred to it as <i>"the TV tracker you've been waiting for"</i>, while MacStories commended its gesture-driven experience and clean UI.</p>
 
 			<div class="spacer"></div>
 
