--- a/plex/index.html
+++ b/plex/index.html
@@ -58,6 +58,22 @@
 
 		<img src="plex1.png" class="banner" alt="">
 
+
+		<div class="overview">
+			<div>
+				<h4>Role</h4>
+				<p>Product Designer</p>
+			</div>
+			<div>
+				<h4>Platform</h4>
+				<p>TV</p>
+			</div>
+			<div>
+				<h4>Timeframe</h4>
+				<p>2 sprints</p>
+			</div>
+		</div>
+
 </div></section>
 
 
