--- a/qvc/index.html
+++ b/qvc/index.html
@@ -58,6 +58,22 @@
 
 		<img src="qvc1.png" class="banner" alt="QVC cover">
 
+		<div class="overview">
+			<div>
+				<h4>Role</h4>
+				<p>Product Designer</p>
+			</div>
+			<div>
+				<h4>Platform</h4>
+				<p>Web</p>
+			</div>
+			<div>
+				<h4>Timeframe</h4>
+				<p>10 weeks</p>
+			</div>
+		</div>
+
+
 </div></section>
 
 
