--- a/showpal/index.html
+++ b/showpal/index.html
@@ -58,6 +58,21 @@
 
 		<img src="showpal1.png" class="banner" alt="QVC cover">
 
+		<div class="overview">
+			<div>
+				<h4>Role</h4>
+				<p>Head of Design</p>
+			</div>
+			<div>
+				<h4>Platform</h4>
+				<p>iOS</p>
+			</div>
+			<div>
+				<h4>Timeframe</h4>
+				<p>4 months</p>
+			</div>
+		</div>
+
 </div></section>
 
 
