--- a/milanuncios-pro/index.html
+++ b/milanuncios-pro/index.html
@@ -129,8 +129,8 @@
 			<div class="header">
 				<p class="role">Defining the scope</p>
 			</div>
-			<p class="description">To define the new self-service experience, we first gathered input from every stakeholder: business, marketing, customer support, and legal, to align on goals, technical constraints, and compliance requirements.</p>
-			<p class="description">The initial scope was broad, envisioning several plan configurations and product add-ons that users could combine freely.</p>
+			<p class="description">To define the new self-service experience, we first gathered input from every stakeholder:<strong> business, marketing, customer support, and legal</strong>, to align on goals, technical constraints, and compliance requirements.</p>
+			<p class="description">The initial scope was <strong>quite broad</strong>, envisioning several plan configurations and product add-ons that users could combine freely.</p>
 			<p class="description">The development team was also involved throughout the process, providing technical insights to help us take design decisions.</p>
 		</div>
 
@@ -139,9 +139,9 @@
 			<div class="header">
 				<p class="role">Validation</p>
 			</div>
-			<p class="description">Early prototyping tests revealed that too much flexibility created unnecessary friction. After several testing rounds, we simplified the MVP scope to ensure a smoother and more predictable user flow.</p>
-			<p class="description">In a key workshop with the business team, I presented three strategic approaches that led to the decision to create <strong>pre-defined plan packages</strong>, reducing complexity and allowing users to complete the purchase with confidence and clarity.</p>
-			<p class="description">The result was a <strong>linear, transparent flow</strong> with clear steps and messaging, supporting a consistent and easy-to-use experience.</p>
+			<p class="description">Early prototyping tests revealed that too much flexibility created unnecessary friction. After several testing rounds, we needed to simplify the MVP scope to ensure a smoother solution, so in a <strong>key workshop</strong> with the business team, I presented some strategic approaches that led to the decision to create <strong>pre-defined plan packages</strong>.</p>
+			<p class="description">With this approach, we reduced the amount of user's decisions during the process, affecting plan selection and add-ons configuration.</p>
+			<p class="description">The result was a <strong>linear, confident flow</strong> with clear steps and messaging, generating a consistent and easy-to-use experience.</p>
 		</div>
 
 
@@ -190,7 +190,7 @@
 				<p class="role">Results</p>
 			</div>
 			<p class="description">In early November, we launched a <strong>simple yet robust end-to-end flow</strong>, intuitive for users, but powered by an invisible logic that handles errors and redirects complex cases to the support team via web-to-leads.</p>
-			<p class="description">Within the first 24 hours, and without any promotional campaign, several online subscriptions were successfully completed, validating both the initiative and the need it addressed.</p>
+			<p class="description">Within the first 24 hours, and without any promotional campaign, <strong>several online subscriptions</strong> were successfully completed, validating both the initiative and the need it addressed.</p>
 			<p class="description">The new self-service flow now frees up the customer support team to focus on <strong>high-value cases</strong>, while maintaining full compliance with legal requirements and business needs.</p>
 			<p class="description">In addition, the entire onboarding process fully meets <strong>accessibility standards</strong> and reflects the <strong>visual language of the Milanuncios design system</strong>, ensuring a cohesive, branded, and inclusive experience across the product.</p>
 
