--- a/milanuncios-pro/index.html
+++ b/milanuncios-pro/index.html
@@ -57,7 +57,7 @@
 
 		</div>
 
-		<img src="mapro1.png" class="banner" alt="Milanuncios Pro cover">
+		<div class="wrap-banner"><img src="mapro1.png" class="banner" alt="Milanuncios Pro cover"></div>
 
 		<div class="overview">
 			<div>
