--- a/plex/index.html
+++ b/plex/index.html
@@ -53,10 +53,11 @@
 			<h2>PLEX</h2>
 			<h3>Crafting a flexible, artwork-first browsing experience for Plex TV Apps</h3>
 			<p>Designing a new TV layout aligned with industry standards to create a more engaging and easier experience, while establishing the foundation for the core personalization feature.</p>
+			<p class="work-url"><a href="https://www.plex.tv/" target="project">Visit project</a></p>
 
 		</div>
 
-		<img src="plex1.png" class="banner" alt="">
+		<div class="wrap-banner"><img src="plex1.png" class="banner" alt="Plex cover"></div>
 
 
 		<div class="overview">
@@ -153,7 +154,7 @@
 
 		
 
-		<video class="video-inline" src="plex.mp4" autoplay muted loop playsinlinepreload="auto"></video>
+		<div class="wrap-banner"><video class="video-inline" src="plex.mp4" autoplay muted loop playsinlinepreload="auto"></video></div>
 
 
 		<div class="job">
