--- a/qvc/index.html
+++ b/qvc/index.html
@@ -53,10 +53,10 @@
 			<h2>QVC+</h2>
 			<h3>Responsive Streaming Platform for QVC+</h3>
 			<p>We deliver a fully functional, responsive streaming website within 10 weeks, attracting 73% direct traffic and up to 22 million monthly visits, including qvc.com</p>
-
+			<p class="work-url"><a href="https://plus.qvc.com/" target="project">Visit project</a></p>
 		</div>
 
-		<img src="qvc1.png" class="banner" alt="QVC cover">
+		<div class="wrap-banner"><img src="qvc1.png" class="banner" alt="QVC cover"></div>
 
 		<div class="overview">
 			<div>
@@ -160,7 +160,7 @@
 			<p class="description">Additionally, we had the opportunity to develop motion guidelines that define the transitions and animation styles, to enhance the narrative of the experience.</p>
 		</div>
 
-		<img src="qvc3.png" class="banner" alt="">
+		<div class="wrap-banner"><img src="qvc3.png" class="banner" alt=""></div>
 
 
 
