--- a/showpal/index.html
+++ b/showpal/index.html
@@ -53,10 +53,10 @@
 			<h2>ShowPal</h2>
 			<h3>Customizable TV-Show Tracking App</h3>
 			<p>How a pet project became an iOS app with over 6K MAU, downloaded more than 420K times, and available in 15 languages, with a core user base in the USA, China, the United Kingdom, Spain, and Germany.</p>
-
+			<p class="work-url"><a href="https://apps.apple.com/es/app/showpal-tv-powered-by-trakt-tv/id992387872" target="project">Visit project</a></p>
 		</div>
 
-		<img src="showpal1.png" class="banner" alt="QVC cover">
+		<div class="wrap-banner"><img src="showpal1.png" class="banner" alt="Showpal cover"></div>
 
 		<div class="overview">
 			<div>
@@ -79,12 +79,7 @@
 <section id="challenge"><div class="wrapper">
 
 
-		<div class="job">
-			<p class="description">Formerly known as iShows, this side project was a pivotal milestone in my career to  become a Product Designer.</p>
-		</div>
-
-			<p></p>
-
+	
 		<div class="job">
 			<div class="header">
 				<p class="role">The Challenge</p>
@@ -150,7 +145,7 @@
 			<p class="description">On the server side, we developed a custom backend that can handle thousands of requests per minute, optimized with a robust image database asuring that the app was blazing fast, and remained updated almost with no delays.</p>
 		</div>
 
-		<img src="showpal3.png" class="banner" alt="">
+		<div class="wrap-banner"><img src="showpal3.png" class="banner" alt=""></div>
 
 
 
@@ -194,7 +189,7 @@
 		</div></div>
 
 
-		<img src="showpal4.png" class="banner" alt="">
+		<div class="wrap-banner"><img src="showpal4.png" class="banner" alt=""></div>
 
 </div></section>
 
